--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#### Application properties ####
+app.name='@project.name@'
+app.desc='@project.description@'
+app.version='@project.version@'
+app.url=http://localhost:8080
+app.dev-name= Enzo Dangelo
+app.dev-email= 405424@tecnicatura.frc.utn.edu.ar
+
 spring.application.name=scaffolding
+
